Add parameters and improve build and doc